fix: z-index

--- a/src/app/styles/custom.css
+++ b/src/app/styles/custom.css
@@ -7,7 +7,7 @@ body:before{
     display: block;
     width: 100%;
     height: 20rem;
-    z-index: 10;
+    z-index: 99;
     content: "";
     background: linear-gradient(.5turn, hsl(var(--background)) -10%, hsla(0, 0%, 5%, 0) 30%);
 }
