--- a/src/shared/ui/card/Card.module.scss
+++ b/src/shared/ui/card/Card.module.scss
@@ -8,7 +8,7 @@
     gap: 1rem;
     text-decoration: none;
 
-    z-index: 666;
+    z-index: 49;
 
     &_disabled{
         cursor: default;
